--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/process": "~2.0|~3.0|~4.0"
+        "symfony/process": "~2.0|~3.0|~4.0|~5.0",
+        "ext-simplexml": "@stable"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
